# docs/swagger.json
@@ -706,7 +706,7 @@
                 }
             }
         },
-        "/meetings/update": {
+        "/meetings/update/{id}": {
             "put": {
                 "security": [
                     {
@@ -1063,9 +1063,6 @@
                 },
                 "endTime": {
                     "type": "string"
-                },
-                "id": {
-                    "type": "integer"
                 },
                 "startTime": {
                     "type": "string"
